[package]
name = "prometheus-sensors"
description = "A bme280, mcp9808, and sht31 service."
authors = ["David Lawrence Campbell"]
license = "MIT"
version = "0.1.0"
rust-version = "1.81"
edition = "2021"
repository = "https://github.com/dcampbell24/prometheus-sensors"
categories = ["hardware-support"]
keywords = ["prometheus", "sensors", "weather", "weather-underground"]

[dependencies]
anyhow = "1"
bme280 = "0.5"
chrono = { version = "0.4", optional = true }
dirs = { version = "5", optional = true }
embedded-hal = "1"
linux-embedded-hal = "0.4"
mcp9808 = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
reqwest = { version = "0.12", features = ["blocking"], optional = true }
ron = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
sht31 = "0.3"

[features]
weather-underground = ["dep:chrono", "dep:dirs", "dep:reqwest", "dep:ron", "dep:serde"]

[lints.clippy]
cargo = "warn"
pedantic = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[package.metadata.deb]
maintainer = "David Campbell <dcampbell24@gmail.com>"
assets = [
    ["target/release/prometheus-sensors", "usr/bin/", "755"],
    ["sensors.service", "etc/systemd/system/", "755"],
]
